# checkmate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  stealth.js
agent/: __init__.py  executor_client.py  graph.py  llm.py  mcp_client.py  state.py
agent/nodes/: builder.py  classifier.py  executor.py  failure_classifier.py  generator.py  healer.py  planner.py  recorder_processor.py  reporter.py
agent/utils/: __init__.py  resolver.py
api/: main.py
api/routes/: agent.py  config.py  environments.py  executor.py  fixtures.py  folders.py  healer.py  notifications.py  projects.py  recorder.py  schedules.py  settings.py  test_cases.py  test_runs.py  vault.py
api/utils/: streaming.py
core/: __init__.py  config.py  logging.py
db/: crud.py  encryption.py  models.py  session.py
db/migrations/: 001_add_retry_fields.sql  002_add_schedules.sql  003_add_fixtures.sql  003_add_fixtures_postgres.sql  004_add_fixture_name_to_steps.sql  004_add_fixture_name_to_steps_postgres.sql  005_add_folders.sql  005_update_fixture_state_schema.sql  005_update_fixture_state_schema_postgres.sql  006_add_environments.sql  007_add_vault.sql  008_add_scenarios_enhancements.sql  migrate.py
scheduler/: __init__.py  executor.py  notifier.py  service.py
scripts/: migrate.sh  migrate_add_environments.py  migrate_add_folders.py  migrate_add_vault.py  start.sh
tests/: __init__.py  test_streaming_utils.py
